--- a/Module_2/index.html
+++ b/Module_2/index.html
@@ -89,7 +89,7 @@
                         <div class="slider__wrapper"></div>
                     </div>
                     <div class="slider__buttons">
-                        <button class="slider__buttons__prev disabled"><img src="./assets/svg/prevBlack.svg" alt="Prev" /></button
+                        <button class="slider__buttons__prev disabled"><img src="./assets/svg/prevWhite.svg" alt="Prev" /></button
                         ><button class="slider__buttons__next"><img src="./assets/svg/nextWhite.svg" alt="next" /></button>
                     </div>
                 </div>
